# InfiNum

./: CMakeLists.txt  README.md  main.cpp
include/: InfiNum.h
src/: InfiNum.cpp  add.cpp  div.cpp  multiply.cpp  stringOP.cpp  subtract.cpp
test/: add.cxx  defaultConstructor.cxx  mcConstructor.cxx  stringConstructor.cxx  test.cxx
